[gd_scene load_steps=14 format=3 uid="uid://main_scene_123"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_game_manager"]
[ext_resource type="PackedScene" uid="uid://bqj8k3m4n5p6r7s8" path="res://scenes/Ball.tscn" id="2_ball_scene"]
[ext_resource type="PackedScene" uid="uid://cflipper123456" path="res://scenes/Flipper.tscn" id="3_flipper_scene"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="4_ui_script"]
[ext_resource type="PackedScene" uid="uid://obstacle_scene_123" path="res://scenes/Obstacle.tscn" id="5_obstacle_scene"]
[ext_resource type="Script" path="res://scripts/ObstacleSpawner.gd" id="6_obstacle_spawner"]
[ext_resource type="PackedScene" uid="uid://ball_queue_scene_123" path="res://scenes/BallQueue.tscn" id="7_ball_queue_scene"]
[ext_resource type="PackedScene" uid="uid://launcher_scene_123" path="res://scenes/Launcher.tscn" id="8_launcher_scene"]
[ext_resource type="Texture2D" uid="uid://background_texture" path="res://assets/sprites/background.png" id="9_background_texture"]
[ext_resource type="Texture2D" uid="uid://wall_texture" path="res://assets/sprites/wall.png" id="10_wall_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_top"]
size = Vector2(800, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_left"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_right"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_bottom"]
size = Vector2(800, 20)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wall"]
bounce = 0.7
friction = 0.3

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
position = Vector2(0, 0)
script = ExtResource("1_game_manager")
ball_scene = ExtResource("2_ball_scene")
ball_spawn_position = Vector2(400, 550)
launch_force = Vector2(0, -600)

[node name="BallQueue" parent="." instance=ExtResource("7_ball_queue_scene")]
ball_scene = ExtResource("2_ball_scene")

[node name="Launcher" parent="." instance=ExtResource("8_launcher_scene")]

[node name="Playfield" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Playfield"]
offset_left = 0.0
offset_top = 0.0
offset_right = 800.0
offset_bottom = 600.0
expand_mode = 1
stretch_mode = 0
texture = ExtResource("9_background_texture")

[node name="Walls" type="Node2D" parent="Playfield"]

[node name="ObstacleSpawner" type="Node2D" parent="Playfield"]
script = ExtResource("6_obstacle_spawner")
obstacle_scene = ExtResource("5_obstacle_scene")
num_obstacles = 8

[node name="WallTop" type="StaticBody2D" parent="Playfield/Walls"]
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_wall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Walls/WallTop"]
shape = SubResource("RectangleShape2D_wall_top")
position = Vector2(400, 10)

[node name="Visual" type="Sprite2D" parent="Playfield/Walls/WallTop"]
texture = ExtResource("10_wall_texture")
offset = Vector2(400, 10)
scale = Vector2(40, 1)

[node name="WallLeft" type="StaticBody2D" parent="Playfield/Walls"]
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_wall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Walls/WallLeft"]
shape = SubResource("RectangleShape2D_wall_left")
position = Vector2(10, 300)

[node name="Visual" type="Sprite2D" parent="Playfield/Walls/WallLeft"]
texture = ExtResource("10_wall_texture")
offset = Vector2(10, 300)
scale = Vector2(1, 30)

[node name="WallRight" type="StaticBody2D" parent="Playfield/Walls"]
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_wall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Walls/WallRight"]
shape = SubResource("RectangleShape2D_wall_right")
position = Vector2(790, 300)

[node name="Visual" type="Sprite2D" parent="Playfield/Walls/WallRight"]
texture = ExtResource("10_wall_texture")
offset = Vector2(790, 300)
scale = Vector2(1, 30)

[node name="WallBottom" type="StaticBody2D" parent="Playfield/Walls"]
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_wall")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playfield/Walls/WallBottom"]
shape = SubResource("RectangleShape2D_wall_bottom")
position = Vector2(400, 590)

[node name="Visual" type="Sprite2D" parent="Playfield/Walls/WallBottom"]
texture = ExtResource("10_wall_texture")
offset = Vector2(400, 590)
scale = Vector2(40, 1)

[node name="Flippers" type="Node2D" parent="."]

[node name="FlipperLeft" parent="Flippers" instance=ExtResource("3_flipper_scene")]
position = Vector2(200, 550)
rotation = 0.0
flipper_side = "left"

[node name="FlipperRight" parent="Flippers" instance=ExtResource("3_flipper_scene")]
position = Vector2(600, 550)
rotation = 0.0
flipper_side = "right"

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_ui_script")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Score: 0"

[node name="Instructions" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 70.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Left/A: Left Flipper
Right/D: Right Flipper
Hold Space/Down: Charge Launcher
Esc: Pause"

[connection signal="score_changed" from="GameManager" to="UI" method="set_score_text"]

